--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding: 4rem;
+    padding: 2rem;
     min-height: 70vh;
 }
 .services .Heading h1{
@@ -381,9 +381,10 @@
          display: none;
      }
      .services .servicelist .serviceitemcard{
-        /* max-width: 95vw; */
-        margin: 0.5rem 0.5rem;
-       
+         margin: 0.5rem 0.5rem;
+         width: auto;
+         max-width: 98vw;
+         
      }
  }
 
@@ -409,8 +410,9 @@
          display: none;
      }
      .services .servicelist .serviceitemcard{
-        max-width: 95vw;
+        /* max-width: 95vw; */
         margin: 0.5rem 0;
+        min-height: 320px;
        
      }
  }
