--- a/style.css
+++ b/style.css
@@ -725,15 +725,15 @@
  }
 
  .sliderx .slide-track {
-     animation: scroll 60s  infinite linear;
+     animation: scroll 40s  infinite linear;
      /* animation-iteration-count: infinite; */
      display: flex;
      width: calc(250px * 14);
  }
 
  .sliderx .slide {
-     max-height: 250PX;
-     width: 250px;
+     /* max-height: 250PX; */
+     /* width: 300px; */
      /* background-color: #06f49e; */
      /* border: 1px solid var(--Tertiary); */
      display: flex;
@@ -741,6 +741,7 @@
      justify-content: center;
      align-items: center;
      transition: all 0.5s ease;
+     margin: 0 0.5rem;
  }
  .sliderx .slide img {
         height: 200px;
@@ -765,7 +766,7 @@
     width: fit-content;
     color: #ffffff;
     background-color: #000;
-    width: 80%;
+    width: 100%;
     border-radius: 0 0  1rem 1rem;
     display: flex;
     justify-content: center;
@@ -775,7 +776,7 @@
 .sliderx .slide h2{
     font-size: 1rem;
     background-color: #000;
-    width: 80%;
+    width: 100%;
     border-radius: 1rem 1rem  0 0;
 }
  .sliderx .slide .title h2 {
