--- a/style.css
+++ b/style.css
@@ -412,7 +412,36 @@
  .services .servicelist .serviceitemcard p {
      color: #fff;
  }
-
+ .certified{
+    width: 100vw;
+    min-height: 40vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+ }
+ .certified .images{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    
+ }
+ .certified .images img{
+    /* width: 200px; */
+    height: 60px;
+    background-color: #fff;
+    margin: 0.2rem;
+ }
+.certified .heading h2{
+        font-size: 3rem;
+        font-weight: 500;
+        color: #fff;
+        word-spacing: 0.4rem;
+        text-align: center;
+     }
  @media (min-width: 768px) and (max-width: 1023px) {
      .homecontent .left .heading h1 {
          font-size: 2rem;
@@ -466,8 +495,13 @@
          padding: 10px 30px;
      }
 
-     .Home .navbar .animate-charcter {
-         display: none;
+     .Home .navbar .title .animate-charcter {
+         /* display: none; */
+         /* font-size: 0.1rem; */
+         font-size: 1rem;
+     }
+     #contactus{
+        display: none;
      }
 
      .services .servicelist .serviceitemcard {
@@ -488,6 +522,11 @@
      .sliderx h2{
         font-size: 2rem;
      }
+     .certified .heading h2{
+        font-size: 2rem;
+        margin-bottom: 0.5rem;
+     }
+     
  }
 
 
@@ -820,7 +859,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-start;
     padding: 0 2em;
     min-height: 10em;
