--- a/style.css
+++ b/style.css
@@ -52,8 +52,8 @@
 
      min-height: 100vh;
      min-width: 100vw;
-     background-color: #0093E9;
      /* background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%); */
+     background-color: #510a75;
      background-image: linear-gradient(160deg, #171628 0%, #bb4ff1 100%);
 
 
@@ -104,8 +104,12 @@
      opacity: 0.7;
  }
 
+ .Home .indexreload {
+     text-decoration: none;
+ }
+
  .Home .navbar {
-     height: 15vh;
+     height: 12vh;
      width: 100vw;
      display: flex;
      justify-content: space-between;
@@ -302,6 +306,18 @@
      min-height: 70vh;
  }
 
+ .homecontentx {
+     display: flex;
+     flex-wrap: wrap;
+     padding: 4rem;
+     align-items: center;
+     justify-content: center;
+     min-height: 80vh;
+     border-radius: 2rem;
+     background-color: #c2dbe0;
+     margin: 1rem;
+ }
+
  .homecontent .left {
      display: flex;
      flex-direction: column;
@@ -312,6 +328,27 @@
      justify-content: flex-start;
      align-items: flex-start;
      /* background-color: #06f49e; */
+ }
+ .homecontent .leftx {
+     display: flex;
+     flex-direction: column;
+
+     max-width: 50vw;
+     height: 100%;
+     display: flex;
+     justify-content: flex-start;
+     align-items: flex-start;
+     /* background-color: #06f49e; */
+ }
+
+ .homecontent .leftx h2 {
+     font-size: 1.4rem;
+     font-weight: 400;
+     color: #fff;
+     word-spacing: 4px;
+ }
+ .homecontent .leftx h2 span{
+    font-size: 3.4rem;
  }
 
  .homecontent .left .heading h1,
@@ -412,41 +449,47 @@
  .services .servicelist .serviceitemcard p {
      color: #fff;
  }
- .certified{
-    width: 100vw;
-    min-height: 40vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem;
+
+ .certified {
+     width: 100vw;
+     min-height: 40vh;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     padding: 1rem;
  }
- .certified .images{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    
+
+ .certified .images {
+     display: flex;
+     flex-direction: row;
+     justify-content: center;
+     align-items: center;
+     flex-wrap: wrap;
+
  }
- .certified .images img{
-    /* width: 200px; */
-    height: 60px;
-    background-color: #fff;
-    margin: 0.2rem;
+
+ .certified .images img {
+     /* width: 200px; */
+     height: 60px;
+     background-color: #fff;
+     margin: 0.2rem;
  }
-.certified .heading h2{
-        font-size: 3rem;
-        font-weight: 500;
-        color: #fff;
-        word-spacing: 0.4rem;
-        text-align: center;
-     }
+
+ .certified .heading h2 {
+     font-size: 3rem;
+     font-weight: 500;
+     color: #fff;
+     word-spacing: 0.4rem;
+     text-align: center;
+ }
+
  @media (min-width: 768px) and (max-width: 1023px) {
      .homecontent .left .heading h1 {
          font-size: 2rem;
          width: fit-content;
      }
+     
 
      .homecontent .left .heading p {
          font-size: 16px;
@@ -478,13 +521,30 @@
  }
 
  @media (max-width:628px) {
+    .homecontent{
+        padding: 3rem;
+    }
      .homecontent .left {
          max-width: 100%;
      }
+     .homecontent .leftx {
+       max-width: 100%;
+    }
+   
+    .homecontent .leftx h2 {
+        font-size: 0.8rem;
+        font-weight: 400;
+        color: #fff;
+        word-spacing: 4px;
+    }
+    .homecontent .leftx h2 span{
+       font-size: 1.6rem;
+    }
 
      .homecontent .left .heading h1 {
          font-size: 32px;
      }
+
 
      .homecontent .right {
          max-width: 100%;
@@ -500,8 +560,9 @@
          /* font-size: 0.1rem; */
          font-size: 1rem;
      }
-     #contactus{
-        display: none;
+
+     #contactus {
+         display: none;
      }
 
      .services .servicelist .serviceitemcard {
@@ -515,18 +576,20 @@
          font-size: 2rem;
      }
 
-     .services .Heading h1{
-        font-size: 2rem;
-        margin-bottom: 0.5rem;
+     .services .Heading h1 {
+         font-size: 2rem;
+         margin-bottom: 0.5rem;
      }
-     .sliderx h2{
-        font-size: 2rem;
+
+     .sliderx h2 {
+         font-size: 2rem;
      }
-     .certified .heading h2{
-        font-size: 2rem;
-        margin-bottom: 0.5rem;
+
+     .certified .heading h2 {
+         font-size: 2rem;
+         margin-bottom: 0.5rem;
      }
-     
+
  }
 
 
@@ -764,7 +827,7 @@
  }
 
  .sliderx .slide-track {
-     animation: scroll 40s  infinite linear;
+     animation: scroll 40s infinite linear;
      /* animation-iteration-count: infinite; */
      display: flex;
      width: calc(250px * 14);
@@ -782,46 +845,51 @@
      transition: all 0.5s ease;
      margin: 0 0.5rem;
  }
- .sliderx .slide img {
-        height: 200px;
-        width: 200px;
-        background-color: #fff;
-        border: 1px solid var(--Tertiary);
- }
- .sliderx .slide:hover{
-    transform: scale(1.1);
-    animation-play-state: paused;
- }
- .sliderx .slide-track:hover{
-    animation-play-state: paused;
- }
- .sliderx .slide .title{
-/* margin-top: 0.2rem; */
-  padding: 0.2rem 0.4rem;
- text-align: center;
-    background-color: #000;
-    border-radius: 1rem;
-    transition: all 0.5s ease;
-    width: fit-content;
-    color: #ffffff;
-    background-color: #000;
-    width: 100%;
-    border-radius: 0 0  1rem 1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
-.sliderx .slide h2{
-    font-size: 1rem;
-    background-color: #000;
-    width: 100%;
-    border-radius: 1rem 1rem  0 0;
-}
+ .sliderx .slide img {
+     height: 200px;
+     width: 200px;
+     background-color: #fff;
+     border: 1px solid var(--Tertiary);
+ }
+
+ .sliderx .slide:hover {
+     transform: scale(1.1);
+     animation-play-state: paused;
+ }
+
+ .sliderx .slide-track:hover {
+     animation-play-state: paused;
+ }
+
+ .sliderx .slide .title {
+     /* margin-top: 0.2rem; */
+     padding: 0.2rem 0.4rem;
+     text-align: center;
+     background-color: #000;
+     border-radius: 1rem;
+     transition: all 0.5s ease;
+     width: fit-content;
+     color: #ffffff;
+     background-color: #000;
+     width: 100%;
+     border-radius: 0 0 1rem 1rem;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+ }
+
+ .sliderx .slide h2 {
+     font-size: 1rem;
+     background-color: #000;
+     width: 100%;
+     border-radius: 1rem 1rem 0 0;
+ }
+
  .sliderx .slide .title h2 {
      font-size: 0.8rem;
      font-weight: 600;
-    
+
      /* text-align: center; */
      text-transform: uppercase;
      color: #fff;
@@ -829,71 +897,83 @@
      /* color: #000; */
      /* background-color: #fff; */
      /* border-radius: 1rem; */
-    
+
  }
+
  footer {
-    background-color: #121315;
-    color: #a7a7a7;
-    font-size: 16px;
-  }
-  footer * {
-    font-family: "Poppins", sans-serif;
-    box-sizing: border-box;
-    border: none;
-    outline: none;
-  }
-  .row {
-    padding: 1em 1em;
-  }
-  .row.primary {
-    /* display: grid; */
-    /* grid-template-columns: 2fr 1fr 1fr 2fr; */
-    /* align-items: stretch; */
-    display: flex;
-    /* flex-wrap: wrap; */
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .column {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    padding: 0 2em;
-    min-height: 10em;
-  }
-  h3 {
-    width: 100%;
-    text-align: left;
-    color: white;
-    font-size: 1.4em;
-    white-space: nowrap;
-  }
-  ul {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    padding: 0;
-    margin: 0;
-  }
-  li:not(:first-child) {
-    margin-top: 0.8em;
-  }
-  ul li a {
-    color: #a7a7a7;
-    text-decoration: none;
-  }
-  ul li a:hover {
-    color: #2a8ded;
-  }
-  .about p {
-    text-align: justify;
-    line-height: 2;
-    margin: 0;
-  }
-  /* input,
+     background-color: #121315;
+     color: #a7a7a7;
+     font-size: 16px;
+ }
+
+ footer * {
+     font-family: "Poppins", sans-serif;
+     box-sizing: border-box;
+     border: none;
+     outline: none;
+ }
+
+ .row {
+     padding: 1em 1em;
+ }
+
+ .row.primary {
+     /* display: grid; */
+     /* grid-template-columns: 2fr 1fr 1fr 2fr; */
+     /* align-items: stretch; */
+     display: flex;
+     /* flex-wrap: wrap; */
+     flex-direction: row;
+     justify-content: space-between;
+     align-items: center;
+ }
+
+ .column {
+     width: 100%;
+     display: flex;
+     flex-direction: column;
+     justify-content: flex-start;
+     align-items: flex-start;
+     padding: 0 2em;
+     min-height: 10em;
+ }
+
+ h3 {
+     width: 100%;
+     text-align: left;
+     color: white;
+     font-size: 1.4em;
+     white-space: nowrap;
+ }
+
+ ul {
+     list-style: none;
+     display: flex;
+     flex-direction: column;
+     padding: 0;
+     margin: 0;
+ }
+
+ li:not(:first-child) {
+     margin-top: 0.8em;
+ }
+
+ ul li a {
+     color: #a7a7a7;
+     text-decoration: none;
+ }
+
+ ul li a:hover {
+     color: #2a8ded;
+ }
+
+ .about p {
+     text-align: justify;
+     line-height: 2;
+     margin: 0;
+ }
+
+ /* input,
   button {
     font-size: 1em;
     padding: 1em;
@@ -901,213 +981,246 @@
     border-radius: 5px;
     margin-bottom: 5px;
   } */
-  .row input {
-    font-size: 1em;
-    padding: .4rem 0.4rem;
-    width: 100%;
-    border-radius: 22px;
-    margin-bottom: 5px;
-  }
-  /* button {
+ .row input {
+     font-size: 1em;
+     padding: .4rem 0.4rem;
+     width: 100%;
+     border-radius: 22px;
+     margin-bottom: 5px;
+ }
+
+ /* button {
     background-color: #c7940a;
     color: #ffffff;
   } */
-  div.social {
-    display: flex;
-    justify-content: space-around;
-    font-size: 2.4em;
-    flex-direction: row;
-    margin-top: 0.5em;
-  }
-  .social i {
-    color: #bac6d9;
-  }
-  
-  .copyright {
-    padding: 1em 1em;
-    background-color: #25262e;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .footer-menu{
-    float: left;
-      margin-top: 10px;
-  }
-  
-  .footer-menu a{
-    color: #cfd2d6;
-    padding: 6px;
-  
-    text-decoration: none;
-  }
-  .footer-menu a:hover{
-    color: #27bcda;
-  }
-  .copyright p {
-    font-size: 0.9em;
-    text-align: right;
-  }
-  @media screen and (max-width: 850px) {
-    .row.primary {
-     flex-wrap: wrap;
-    }
-    .column {
-        /* width: 100%;
+ div.social {
+     display: flex;
+     justify-content: space-around;
+     font-size: 2.4em;
+     flex-direction: row;
+     margin-top: 0.5em;
+ }
+
+ .social i {
+     color: #bac6d9;
+ }
+
+ .copyright {
+     padding: 1em 1em;
+     background-color: #25262e;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+ }
+
+ .footer-menu {
+     float: left;
+     margin-top: 10px;
+ }
+
+ .footer-menu a {
+     color: #cfd2d6;
+     padding: 6px;
+
+     text-decoration: none;
+ }
+
+ .footer-menu a:hover {
+     color: #27bcda;
+ }
+
+ .copyright p {
+     font-size: 0.9em;
+     text-align: right;
+ }
+
+ @media screen and (max-width: 850px) {
+     .row.primary {
+         flex-wrap: wrap;
+     }
+
+     .column {
+         /* width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
         padding: 0 2em; */
-        min-height: 1rem;
-      }
-      .column p{
-        /* display: none; */
-      }
-      .subscribe p:nth-child(1){
-        /* display: none; */
-      }
-  
-  }
+         min-height: 1rem;
+     }
 
-  /* Contact us apge css */
-  .container{
-    width: 85%;
-    min-height: 65vh;
-    margin: 60px auto;
-    background: #fff;
-    border-radius: 6px;
-    padding: 10px 30px 30px 40px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-  }
-  .container .content{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .container .content .left-side{
-    width: 25%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 55px;
-    position: relative;
-  }
-  .content .left-side::before{
-    content: '';
-    position: absolute;
-    height: 80%;
-    width: 2px;
-    right: -15px;
-    top: 50%;
-    transform: translateY(-50%);
-    background: #afafb6;
-  }
-  .content .left-side .details{
-    margin: 14px;
-    text-align: center;
-  }
-  .content .left-side .details i{
-    font-size: 30px;
-    color: #06f49e;
-    margin-bottom: 10px;
-  }
-  .content .left-side .details .topic{
-    font-size: 18px;
-    font-weight: 500;
-  }
-  .content .left-side .details .text-one,
-  .content .left-side .details .text-two{
-    font-size: 14px;
-    color: #afafb6;
-  }
-  .container .content .right-side{
-    width: 75%;
-    margin-left: 75px;
-  }
-  .content .right-side .topic-text{
-    font-size: 23px;
-    font-weight: 600;
-    color: #06f49e;
-  }
-  .right-side .input-box{
-    height: 50px;
-    width: 100%;
-    margin: 12px 0;
-  }
-  .right-side .input-box input,
-  .right-side .input-box textarea{
-    height: 100%;
-    width: 100%;
-    border: none;
-    outline: none;
-    font-size: 16px;
-    background: #F0F1F8;
-    border-radius: 6px;
-    padding: 0 15px;
-    resize: none;
-  }
-  .right-side .message-box{
-    min-height: 60px;
-  }
-  .right-side .input-box textarea{
-    padding-top: 6px;
-  }
-  .right-side .button{
-    display: inline-block;
-    margin-top: 12px;
-  }
-  .right-side .button input[type="button"]{
-    color: #fff;
-    font-size: 18px;
-    outline: none;
-    border: none;
-    padding: 8px 16px;
-    border-radius: 6px;
-    background: #06f49e;
-    cursor: pointer;
-    transition: all 0.3s ease;
-  }
-  .button input[type="button"]:hover{
-    background: #5029bc;
-  }
-  @media (max-width: 950px) {
-    .container{
-      width: 90%;
-      padding: 30px 40px 40px 35px ;
-    }
-    .container .content .right-side{
-     width: 75%;
-     margin-left: 55px;
-  }
-  }
-  @media (max-width: 820px) {
-    .container{
-      margin: 40px auto;
-      height: 100%;
-      padding: 10px 30px 15px 20px;
-    }
-    .container .content{
-      flex-direction: column-reverse;
-    }
-   .container .content .left-side{
-     width: 100%;
-     flex-direction: row;
-     margin-top: 40px;
+     .column p {
+         /* display: none; */
+     }
+
+     .subscribe p:nth-child(1) {
+         /* display: none; */
+     }
+
+ }
+
+ /* Contact us apge css */
+ .container {
+     width: 85%;
+     min-height: 65vh;
+     margin: 60px auto;
+     background: #fff;
+     border-radius: 6px;
+     padding: 10px 30px 30px 40px;
+     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+ }
+
+ .container .content {
+     display: flex;
+     align-items: center;
+     justify-content: space-between;
+ }
+
+ .container .content .left-side {
+     width: 25%;
+     height: 100%;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
      justify-content: center;
-     flex-wrap: wrap;
-   }
-   .container .content .left-side::before{
-     display: none;
-   }
-   .container .content .right-side{
+     margin-top: 55px;
+     position: relative;
+ }
+
+ .content .left-side::before {
+     content: '';
+     position: absolute;
+     height: 80%;
+     width: 2px;
+     right: -15px;
+     top: 50%;
+     transform: translateY(-50%);
+     background: #afafb6;
+ }
+
+ .content .left-side .details {
+     margin: 14px;
+     text-align: center;
+ }
+
+ .content .left-side .details i {
+     font-size: 30px;
+     color: #06f49e;
+     margin-bottom: 10px;
+ }
+
+ .content .left-side .details .topic {
+     font-size: 18px;
+     font-weight: 500;
+ }
+
+ .content .left-side .details .text-one,
+ .content .left-side .details .text-two {
+     font-size: 14px;
+     color: #afafb6;
+ }
+
+ .container .content .right-side {
+     width: 75%;
+     margin-left: 75px;
+ }
+
+ .content .right-side .topic-text {
+     font-size: 23px;
+     font-weight: 600;
+     color: #06f49e;
+ }
+
+ .right-side .input-box {
+     height: 50px;
      width: 100%;
-     margin-left: 0;
-   }
-   .container .content .left-side{
-    display: none;
-   }
-   
-  }
+     margin: 12px 0;
+ }
+
+ .right-side .input-box input,
+ .right-side .input-box textarea {
+     height: 100%;
+     width: 100%;
+     border: none;
+     outline: none;
+     font-size: 16px;
+     background: #F0F1F8;
+     border-radius: 6px;
+     padding: 0 15px;
+     resize: none;
+ }
+
+ .right-side .message-box {
+     min-height: 60px;
+ }
+
+ .right-side .input-box textarea {
+     padding-top: 6px;
+ }
+
+ .right-side .button {
+     display: inline-block;
+     margin-top: 12px;
+ }
+
+ .right-side .button input[type="button"] {
+     color: #fff;
+     font-size: 18px;
+     outline: none;
+     border: none;
+     padding: 8px 16px;
+     border-radius: 6px;
+     background: #06f49e;
+     cursor: pointer;
+     transition: all 0.3s ease;
+ }
+
+ .button input[type="button"]:hover {
+     background: #5029bc;
+ }
+
+ @media (max-width: 950px) {
+     .container {
+         width: 90%;
+         padding: 30px 40px 40px 35px;
+     }
+
+     .container .content .right-side {
+         width: 75%;
+         margin-left: 55px;
+     }
+ }
+
+ @media (max-width: 820px) {
+     .container {
+         margin: 40px auto;
+         height: 100%;
+         padding: 10px 30px 15px 20px;
+     }
+
+     .container .content {
+         flex-direction: column-reverse;
+     }
+
+     .container .content .left-side {
+         width: 100%;
+         flex-direction: row;
+         margin-top: 40px;
+         justify-content: center;
+         flex-wrap: wrap;
+     }
+
+     .container .content .left-side::before {
+         display: none;
+     }
+
+     .container .content .right-side {
+         width: 100%;
+         margin-left: 0;
+     }
+
+     .container .content .left-side {
+         display: none;
+     }
+
+ }
