--- a/style.css
+++ b/style.css
@@ -73,7 +73,116 @@
      z-index: 0;
 
  }
+/* About us  */
+.Home  .tag{
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding:  1rem 0;
+}
+ .Home .tagline {
+    background-color: #8EC5FC;
+background-image: linear-gradient(62deg, #8EC5FC 0%, #7f00f7 100%);
+    width: fit-content;
+    color: #fff;
+    padding: 1rem 2rem;
+    border-radius: 2rem;
+   
+ }
+ .Home .section2{
+    min-height: 100vh;
+    height: auto;
+    width: 100vw;
+    overflow: hidden;
+    padding: 2rem;
 
+ }
+ .Home .section2 h2{
+    font-size: 3.2rem;
+    color: #fff;
+    font-weight: 400;
+  text-align: center;
+
+ }
+ 
+
+
+
+ .Home .descnew {
+    min-height: 100vh;
+    width: 100vw;
+    max-width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    padding: 1.5rem;
+    /* background-color: var(--Secondary); */
+}
+
+.Home .descnew .main {
+    width: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    padding: 1.5rem;
+    /* background-color: var(--Secondary); */
+    background-color: #fff;
+    border-radius: 16px;
+}
+
+.Home .descnew .main .left .descsvg {
+    width: 44vw;
+    margin: 0.1rem;
+}
+
+.Home .descnew .main .left .descsvg svg {
+    height: 100%;
+    width: 100%;
+}
+
+.Home .descnew .main .right {
+    width: 45vw;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+}
+
+.Home .descnew .main .right h2 {
+    font-size: 2.8rem;
+    font-weight: 600;
+}
+
+.Home .descnew .main .right li {
+    margin-left: 0.8rem;
+}
+
+.Home .descnew .main .right {
+    font-size: 16px;
+    line-height: 1.5;
+    color: #333;
+
+}
+
+.Home .descnew .main .right button {
+    width: fit-content;
+    padding: 8px 16px;
+    border-radius: 32px;
+    color: var(--Primary);
+    margin: 0.2rem 0;
+    border: 0px;
+    outline: none;
+    background-color: #5fca49;
+    font-size: 1.1rem;
+}
+
+.Home .descnew .main .right button a {
+    text-decoration: none;
+    color: inherit;
+}
+/* About us  */
  .section1::after {
      width: 150px;
      height: 150px;
@@ -306,17 +415,6 @@
      min-height: 70vh;
  }
 
- .homecontentx {
-     display: flex;
-     flex-wrap: wrap;
-     padding: 4rem;
-     align-items: center;
-     justify-content: center;
-     min-height: 80vh;
-     border-radius: 2rem;
-     background-color: #c2dbe0;
-     margin: 1rem;
- }
 
  .homecontent .left {
      display: flex;
@@ -327,8 +425,10 @@
      display: flex;
      justify-content: flex-start;
      align-items: flex-start;
+     text-shadow: 4px 3px 1px rgba(0,0,0,0.18);
      /* background-color: #06f49e; */
  }
+/* About us  */
  .homecontent .leftx {
      display: flex;
      flex-direction: column;
@@ -346,11 +446,13 @@
      font-weight: 400;
      color: #fff;
      word-spacing: 4px;
- }
- .homecontent .leftx h2 span{
-    font-size: 3.4rem;
+     text-shadow: 4px 3px 1px rgba(0,0,0,0.18);
  }
 
+ .homecontent .leftx h2 span {
+     font-size: 3.4rem;
+ }
+/* About us  */
  .homecontent .left .heading h1,
  .typewriter {
      font-size: 4rem;
@@ -489,7 +591,7 @@
          font-size: 2rem;
          width: fit-content;
      }
-     
+
 
      .homecontent .left .heading p {
          font-size: 16px;
@@ -521,25 +623,28 @@
  }
 
  @media (max-width:628px) {
-    .homecontent{
-        padding: 3rem;
-    }
+     .homecontent {
+         padding: 3rem;
+     }
+
      .homecontent .left {
          max-width: 100%;
      }
+
      .homecontent .leftx {
-       max-width: 100%;
-    }
-   
-    .homecontent .leftx h2 {
-        font-size: 0.8rem;
-        font-weight: 400;
-        color: #fff;
-        word-spacing: 4px;
-    }
-    .homecontent .leftx h2 span{
-       font-size: 1.6rem;
-    }
+         max-width: 100%;
+     }
+
+     .homecontent .leftx h2 {
+         font-size: 0.8rem;
+         font-weight: 400;
+         color: #fff;
+         word-spacing: 4px;
+     }
+
+     .homecontent .leftx h2 span {
+         font-size: 1.6rem;
+     }
 
      .homecontent .left .heading h1 {
          font-size: 32px;
@@ -1222,5 +1327,32 @@
      .container .content .left-side {
          display: none;
      }
+     .Home .descnew .main {
+        min-width: 80vw;
+    }
+
+    .Home.descnew .main .left {
+        width: 80vw;
+    }
+
+    .Home .descnew .main .right {
+        width: 80vw;
+        /* align-items: flex-start; */
+    }
+    .Home .descnew .main .right h2{
+        font-size: 1.2rem;
+    }
+    .Home .descnew .main .right p{
+        font-size: 0.8rem;
+    }
+    .descnew .main {
+        flex-direction: column;
+    }
+    .tag .tagline{
+        font-size: 0.6rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
  }
